--- a/umi/umi解析/01.md
+++ b/umi/umi解析/01.md
@@ -57,6 +57,22 @@ umi4中用到的命令主要有两个
 列出自上次标记版本以来已更改的本地软件包
 输出lerna changed是一个包列表，这些包将成为下一个lerna version或lerna publish执行的主题 
 
+lerna的常用api：
+- lerna.bootstrap()：在包之间解决依赖关系，并安装所有依赖项。
+- lerna.changed()：列出自上次发布以来所做的更改，可用于检测哪些包需要进行构建或测试。
+- lerna.checkout()：检出与当前工作区版本不同的所有包的 Git ref。
+- lerna.clean()：删除所有包中的 node_modules 和打包输出。
+- lerna.create()：在包含已知包管理器的目录中创建新的 Lerna 仓库。
+- lerna.diff()：在两个 Git 引用之间显示有关包的更改。
+- lerna.exec()：在包目录中运行任意命令。
+- lerna.import()：将现有的 Git 仓库导入到 Lerna 仓库中作为新包。
+- lerna.init()：在当前目录中初始化一个新的 Lerna 仓库。
+- lerna.link()：链接所有互相依赖的包。
+- lerna.list()：列出所有包。
+- lerna.publish()：将更改提交到 Git 并发布新版本。
+- lerna.run()：在匹配的包目录中运行任意命令。
+- lerna.version()：更改所有包的版本，并将更改提交到 Git。
+
 ## turbo
 
 turbo 是一个为 monorepo 而生的极快的构建系统。目的是为了解决大型 monorepo 项目构建速度缓慢的一大痛点。
