--- a/网络/页面加载到结束经历了哪些.md
+++ b/网络/页面加载到结束经历了哪些.md
@@ -1,7 +1,7 @@
 ```
-1. DNS协议 域名=》ip地址
+1. DNS协议 域名=>ip地址
 2. 建立TCP链接，发请求
-3. 后端接受请求，读文件，读数据库，获取玩了端口，返回数据
+3. 后端接受请求，读文件，读数据库，获取完了端口，返回数据
 4. 前端接收html渲染页面
 1. html=> dom tree
 2. css=>css tree
