--- a/vue/v3/扩充.md
+++ b/vue/v3/扩充.md
@@ -319,4 +319,78 @@ renderToString(app).then((html) => {
 
 ---
 
-希望这份扩充内容总结能帮助你更全面地理解和使用 Vue 3！如果需要更详细的内容，可以进一步扩展。
+## 第8点：Vue 3 插件系统
+Vue 3 的插件系统允许开发者扩展 Vue 的功能，通常用于添加全局功能、组件或指令。以下是使用 Vue 3 插件系统的步骤：
+
+### 1. 创建插件
+插件是一个对象，包含 `install` 方法，或者直接是一个函数。
+```javascript
+// 创建一个简单的插件
+const MyPlugin = {
+  install(app, options) {
+    // 添加全局方法
+    app.config.globalProperties.$myMethod = function () {
+      console.log('这是一个全局方法');
+    };
+
+    // 添加全局指令
+    app.directive('focus', {
+      mounted(el) {
+        el.focus();
+      },
+    });
+
+    // 添加全局组件
+    app.component('MyComponent', {
+      template: '<div>这是一个全局组件</div>',
+    });
+
+    // 添加全局混入
+    app.mixin({
+      created() {
+        console.log('全局混入的 created 钩子');
+      },
+    });
+  },
+};
+```
+
+### 2. 注册插件
+在 Vue 应用中通过 `app.use()` 注册插件。
+```javascript
+import { createApp } from 'vue';
+import App from './App.vue';
+import MyPlugin from './my-plugin';
+
+const app = createApp(App);
+
+// 注册插件
+app.use(MyPlugin, { someOption: true });
+
+app.mount('#app');
+```
+
+### 3. 使用插件
+插件注册后，可以在 Vue 应用中使用插件提供的功能。
+```javascript
+// 使用全局方法
+this.$myMethod();
+
+// 使用全局指令
+<input v-focus />;
+
+// 使用全局组件
+<MyComponent />;
+```
+
+### 4. 高级用法
+- **插件的选项**：通过 `install` 方法的第二个参数传递选项。
+- **动态加载插件**：可以根据条件动态加载插件。
+```javascript
+// 动态加载插件
+if (someCondition) {
+  app.use(MyPlugin, { option: 'value' });
+}
+```
+
+通过插件系统，开发者可以轻松扩展 Vue 应用的功能，提升代码的复用性和可维护性。
