--- a/部署/前端自动化打包部署方案.md
+++ b/部署/前端自动化打包部署方案.md
@@ -42,34 +42,37 @@
 ### 示例（GitHub Actions）：
 **`.github/workflows/deploy.yml`**：
 ```yaml
-name: Deploy Frontend
+// ...existing code...
+```yaml
+name: Deploy Frontend  # 工作流名称，可在 Actions 列表中看到
 
 on:
   push:
     branches:
-      - main
+      - main            # 当代码推送到 main 分支时触发该流水线
 
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # 在 GitHub 提供的最新 Ubuntu Runner 上运行任务
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v3   # 将仓库代码检出到 runner 工作目录
 
     - name: Install dependencies
-      run: npm install
+      run: npm install            # 安装项目依赖（可根据项目改为 pnpm 或 yarn）
 
     - name: Build project
-      run: npm run build
+      run: npm run build          # 运行构建脚本，生成生产产物（通常是 dist/ 或 build/）
 
     - name: Deploy to server
-      uses: easingthemes/ssh-deploy@v2.1.5
+      uses: easingthemes/ssh-deploy@v2.1.5  # 使用社区的 SSH 部署 Action 将文件传到远程服务器
       with:
-        SSH_PRIVATE_KEY: ${{ secrets.SSH_KEY }}
-        REMOTE_HOST: your.server.ip
-        REMOTE_USER: your-user
-        TARGET: /var/www/html
+        SSH_PRIVATE_KEY: ${{ secrets.SSH_KEY }}  # 从 GitHub Secrets 注入私钥（不要把私钥写到仓库）
+        REMOTE_HOST: your.server.ip              # 目标服务器地址（替换为真实 IP 或域名）
+        REMOTE_USER: your-user                   # 远程登录用户名（替换）
+        TARGET: /var/www/html                    # 部署目标目录（远程服务器上的路径）
+        # 可选项：PORT、KEEP_FILES、SOURCE 等，参考该 Action 文档配置更多参数
 ```
 
 ### 优点：
