面试题整理

--- a/javaScript/宏任务微任务.md
+++ b/javaScript/宏任务微任务.md
@@ -1,48 +1,108 @@
-宏任务和微任务
-本文的Macrotask在WHATWG 中叫task。Macrotask为了便于理解，并没有实际的出处。
-同步任务和异步任务的划分其实并不准确，准确的分类方式是宏任务(Macrotask)和微任务(Microtask)。
-宏任务包括：`script(整体代码), setTimeout, setInterval, requestAnimationFrame, I/O,setImmediate`。
-其中setImmediate只存在于Node中，requestAnimationFrame只存在于浏览器中。
-微任务包括： `Promise, Object.observe(已废弃), MutationObserver(html5新特性)，process.nextTick。`
-其中process.nextTick只存在于Node中，MutationObserver只存在于浏览器中。
-注意：
-UI Rendering不属于宏任务，也不属于微任务，它是一个与微任务平行的一个操作步骤。
-这种分类的执行方式就是，执行一个宏任务，过程中遇到微任务时，将其放到微任务的事件队列里，当前宏任务执行完成后，会查看微任务的事件队列，依次执行里面的微任务。如果还有宏任务的话，再重新开启宏任务……
+
+# JavaScript 事件循环：宏任务与微任务详解
+
+## 一、基本概念
+
+在JavaScript中，任务（Task）被分为**宏任务（Macrotask）**和**微任务（Microtask）**，这是理解事件循环（Event Loop）的关键。
+
+### 1. 为什么需要区分宏任务和微任务？
+
+同步任务和异步任务的划分其实并不准确。准确的分类方式是宏任务（Macrotask）和微任务（Microtask）。
+
+## 二、宏任务与微任务的分类
+
+### 1. 宏任务（Macrotask）包括：
+- `script(整体代码)`
+- `setTimeout`
+- `setInterval`
+- `requestAnimationFrame`
+- `I/O`（如文件读写、网络请求）
+- `setImmediate`（只存在于Node.js中）
+- `requestIdleCallback`（浏览器API）
+
+> **注意**：
+> - `setImmediate`只存在于Node.js中
+> - `requestAnimationFrame`只存在于浏览器中
+
+### 2. 微任务（Microtask）包括：
+- `Promise`
+- `Object.observe`（已废弃，不推荐使用）
+- `MutationObserver`（HTML5新特性，只存在于浏览器中）
+- `process.nextTick`（只存在于Node.js中）
+
+> **注意**：
+> - `process.nextTick`只存在于Node.js中
+> - `MutationObserver`只存在于浏览器中
+
+### 3. UI Rendering 的位置
+
+UI Rendering不属于宏任务，也不属于微任务，它是一个与微任务平行的操作步骤。
+
+## 三、执行顺序
+
+### 1. 事件循环的基本执行方式
+
+1. 执行一个宏任务（Macrotask）
+2. 在执行过程中，如果遇到微任务（Microtask），将其放入微任务队列
+3. 当前宏任务执行完成后，查看微任务队列，依次执行里面的微任务
+4. 如果还有宏任务，再重新开启宏任务...
+
+### 2. 事件循环流程图
+
 ![alt 属性文本](./image/%E5%AE%8F%E4%BB%BB%E5%8A%A1%E5%BE%AE%E4%BB%BB%E5%8A%A1.jpg)
-
-再举个🌰
 ```
-setTimeout(function () {
-  console.log("a");
-});
+执行一个宏任务
+  │
+  ▼
+执行过程中遇到微任务 → 放入微任务队列
+  │
+  ▼
+宏任务执行完成
+  │
+  ▼
+执行微任务队列中的所有微任务
+  │
+  ▼
+开始下一轮循环（如果有宏任务）
+```
 
+## 四、执行示例
+
+### 1. 基础示例
+
+```javascript
+setTimeout(function () { console.log("a"); });
 new Promise(function (resolve) {
   console.log("b");
-
   for (var i = 0; i < 10000; i++) {
     i == 99 && resolve();
   }
-}).then(function () {
-  console.log("c");
-});
-
+}).then(function () { console.log("c"); });
 console.log("d");
-
-// b// d// c// a
 ```
 
-- 1.首先执行script下的宏任务，遇到setTimeout，将其放入宏任务的队列里。
-- 2.遇到Promise，new Promise直接执行，打印b。
-- 3.遇到then方法，是微任务，将其放到微任务的队列里。
-- 4.遇到console.log('d')，直接打印。
-- 5.本轮宏任务执行完毕，查看微任务，发现then方法里的函数，打印c。
-- 6.本轮event loop全部完成。
-- 7.下一轮循环，先执行宏任务，发现宏任务队列中有一个setTimeout，打印a。
+**执行顺序**：
+1. 首先执行script下的宏任务
+2. 遇到setTimeout，将其放入宏任务队列
+3. 遇到Promise，new Promise直接执行，打印"b"
+4. 遇到then方法，是微任务，将其放到微任务队列
+5. 遇到console.log('d')，直接打印"d"
+6. 本轮宏任务执行完毕，查看微任务，发现then方法里的函数，打印"c"
+7. 本轮event loop全部完成
+8. 下一轮循环，先执行宏任务，发现宏任务队列中有一个setTimeout，打印"a"
 
-综上所述，不要说a是最持久的，如果你认为你彻底明白了，给你出道题，看看下面的代码中，谁最持久？
+**输出结果**：
 ```
+b
+d
+c
+a
+```
+
+### 2. 进阶示例
+
+```javascript
 console.log("a");
-
 setTimeout(function () {
   console.log("b");
   process.nextTick(function () {
@@ -64,7 +124,6 @@ new Promise(function (resolve) {
 }).then(function () {
   console.log("h");
 });
-
 setTimeout(function () {
   console.log("i");
   process.nextTick(function () {
@@ -79,56 +138,148 @@ setTimeout(function () {
 });
 ```
 
+**执行分析**：
 
-好，不要怂，我们来逐步分析。
-##### 第一轮事件循环：
-- 1.第一个宏任务(整体script)进入主线程，console.log('a')，打印a。
-- 2.遇到setTimeout，其回调函数进入宏任务队列，暂定义为setTimeout1。
-- 3.遇到process.nextTick()，其回调函数被分发到微任务队列，暂定义为process1。
-- 4.遇到Promise，new Promise直接执行，打印g。then进入微任务队列，暂定义为then1。
-- 5.遇到setTimeout，其回调函数进入宏任务队列，暂定义为setTimeout2。
+**第一轮事件循环**：
+1. 执行script整体代码
+   - `console.log('a')` → 打印"a"
+   - `setTimeout` → 回调函数放入宏任务队列（setTimeout1）
+   - `process.nextTick` → 回调函数放入微任务队列（process1）
+   - `new Promise` → 直接执行，打印"g"
+   - `then` → 放入微任务队列（then1）
+   - `setTimeout` → 回调函数放入宏任务队列（setTimeout2）
+   
+   **任务队列状态**：
+   - 宏任务队列：setTimeout1, setTimeout2
+   - 微任务队列：process1, then1
 
-此时我们看一下两个任务队列中的情况
+2. 宏任务执行完毕，执行微任务
+   - 执行process1 → 打印"f"
+   - 执行then1 → 打印"h"
+   
+   **输出结果**：a, g, f, h
 
-| 宏任务队列 | 微任务队列 |
-|---|---|
-|setTimeout1、setTimeout2 | process1、then1|
+**第二轮事件循环**：
+1. 执行setTimeout1宏任务
+   - `console.log('b')` → 打印"b"
+   - `process.nextTick` → 放入微任务队列（process2）
+   - `new Promise` → 直接执行，打印"d"
+   - `then` → 放入微任务队列（then2）
+   
+   **任务队列状态**：
+   - 宏任务队列：setTimeout2
+   - 微任务队列：process2, then2
 
+2. 宏任务执行完毕，执行微任务
+   - 执行process2 → 打印"c"
+   - 执行then2 → 打印"e"
+   
+   **输出结果**：b, d, c, e
 
+**第三轮事件循环**：
+1. 执行setTimeout2宏任务
+   - `console.log('i')` → 打印"i"
+   - `process.nextTick` → 放入微任务队列（process3）
+   - `new Promise` → 直接执行，打印"k"
+   - `then` → 放入微任务队列（then3）
+   
+   **任务队列状态**：
+   - 宏任务队列：空
+   - 微任务队列：process3, then3
 
+2. 宏任务执行完毕，执行微任务
+   - 执行process3 → 打印"j"
+   - 执行then3 → 打印"l"
+   
+   **输出结果**：i, k, j, l
 
-第一轮宏任务执行完毕，打印出a和g。
-查找微任务队列中有`process1`和`then1`。全部执行，打印f和h。
-第一轮事件循环完毕，打印出a、g、f和h。
-##### 第二轮事件循环：
-- 1.从setTimeout1宏任务开始，首先是console.lob('b')，打印b。
-- 2.遇到process.nextTick()，进入微任务队列，暂定义为process2。
-- 3.new Promise直接执行，输出d，then进入微任务队列，暂定义为then2。
+**最终输出结果**：
+```
+a
+g
+f
+h
+b
+d
+c
+e
+i
+k
+j
+l
+```
 
-此时两个任务队列中
-| 宏任务队列 | 微任务队列 |
-|---|---|
-|setTimeout2 | process2、 then2|
+## 五、关键总结
 
+1. **执行顺序**：宏任务 → 微任务 → 宏任务 → 微任务...
 
-第二轮宏任务执行完毕，打印出b和d。
-查找微任务队列中有<font color='red'>process2</font>和<font color='red'>then2</font>。全部执行，打印c和e。
-第二轮事件循环完毕，打印出b、d、c和e。
+2. **宏任务 vs 微任务**：
+   - 宏任务：setTimeout, setInterval, I/O, UI Rendering
+   - 微任务：Promise, MutationObserver, process.nextTick
 
-##### 第三轮事件循环
-- 1.执行setTimeout2，遇到console.log('i')，打印i。
-- 2.遇到process.nextTick()，进入微任务队列，暂定义为process3。
-- 3.new Promise直接执行，打印k。
-- 4.then进入微任务队列，暂定义为then3。 
+3. **重要规则**：
+   - 每个宏任务执行完后，会执行完当前微任务队列的所有任务
+   - 微任务在宏任务之间执行，而不是在宏任务内部
 
-此时两个任务队列中
-宏任务队列：空
-微任务队列：process3、then3
-第三轮宏任务执行完毕，打印出i和k。
-查找微任务队列中有process3和then3。全部执行，打印j和l。
-第三轮事件循环完毕，打印出i、k、j和l。
+4. **常见误区**：
+   - "a是最持久的" - 这个说法是错误的，根据上面的例子，"l"是最持久的
+   - UI Rendering不属于宏任务，也不属于微任务
 
-到此为止，三轮事件循环完毕，最终输出结果为：
-```a、g、f、h、b、d、c、e、i、k、j、l```
-l最持久，你答对了吗？
-以上代码仅在浏览器环境中执行顺序如下，node环境下可能存在不同。
+5. **浏览器与Node.js的差异**：
+   - Node.js中：有`setImmediate`和`process.nextTick`
+   - 浏览器中：有`requestAnimationFrame`和`MutationObserver`
+
+## 六、实际应用
+
+### 1. 如何优化代码执行顺序
+
+```javascript
+// 优化代码执行顺序
+function doSomething() {
+  // 一些操作
+  console.log("操作完成");
+  
+  // 用微任务确保在当前宏任务完成后执行
+  Promise.resolve().then(() => {
+    console.log("微任务执行");
+  });
+}
+```
+
+### 2. 解决UI渲染问题
+
+```javascript
+// 避免在渲染过程中进行复杂计算
+function updateUI() {
+  // 先进行数据处理
+  const data = processData();
+  
+  // 用微任务确保在当前宏任务完成后更新UI
+  Promise.resolve().then(() => {
+    renderUI(data);
+  });
+}
+```
+
+## 七、常见问题
+
+### 1. 为什么Promise的then回调是微任务？
+
+Promise的then回调被设计为微任务，是为了确保在当前宏任务执行完成后，但在下一个宏任务开始前执行，保证了异步操作的有序性。
+
+### 2. 为什么process.nextTick是微任务？
+
+`process.nextTick`是Node.js特有的API，它的设计目的是在当前事件循环的末尾、下一个事件循环开始之前执行，因此它被归类为微任务。
+
+### 3. 为什么setTimeout比Promise的then先执行？
+
+因为setTimeout是宏任务，而Promise的then是微任务。宏任务在微任务之前执行，但每个宏任务执行完成后，会先执行所有微任务，然后再执行下一个宏任务。
+
+## 八、总结
+
+- JavaScript的事件循环基于宏任务和微任务的执行顺序
+- 宏任务包括：script, setTimeout, setInterval, I/O, setImmediate
+- 微任务包括：Promise, MutationObserver, process.nextTick
+- 执行顺序：宏任务 → 微任务 → 宏任务 → 微任务...
+- UI Rendering是与微任务平行的操作步骤
+- 理解宏任务和微任务的执行顺序，对于编写高性能、可预测的异步代码至关重要
