--- a/vue/v3/扩充.md
+++ b/vue/v3/扩充.md
@@ -1,396 +1,496 @@
-以下是基于文件内容生成的 **Vue 3 扩充内容总结**，涵盖 Vue Router、Pinia、Composition API、动画与过渡、异步组件、插件系统、错误处理、性能优化、边界情况和服务端渲染（SSR）等内容：
+以下是在原有基础上补充完善的 **Vue 3 核心知识点总结**，新增了错误处理、边界情况、自定义指令进阶、响应式工具等内容，并补充了更多实用示例：
 
----
 
-# Vue 3 扩充内容总结
+# Vue 3 核心知识点总结（补充版）
 
----
 
-## **1. Vue Router（如果项目使用路由）**
+## **1. Vue Router（路由管理）**
 
-### **核心概念**
-- **`router-link`**: 用于导航，生成 `<a>` 标签。
-  - 属性：
-    - `to`: 指定目标路径，可以是字符串或对象。
-    - `replace`: 替换当前历史记录，而不是添加新记录。
-    - `exact`: 精确匹配路径。
-- **`router-view`**: 用于显示匹配的组件。
-- **路由配置**:
-  - `path`: 路由路径。
-  - `component`: 路由对应的组件。
-  - `name`: 路由名称，用于命名路由。
-  - `redirect`: 重定向到其他路径。
-  - `children`: 嵌套路由。
-
-### **动态路由**
-- **定义动态参数**:
-  ```javascript
-  { path: '/user/:id', component: User }
-  ```
-- **获取动态参数**:
-  ```javascript
-  import { useRoute } from 'vue-router';
-  const route = useRoute();
-  console.log(route.params.id);
-  ```
-
-### **嵌套路由**
-- **作用**: 在父路由中嵌套子路由，适用于多级页面结构。
-- **示例**:
-  ```javascript
-  const routes = [
-    {
-      path: '/parent',
-      component: Parent,
-      children: [
-        { path: 'child', component: Child },
-        { path: 'child2', component: Child2 }
-      ]
-    }
-  ];
-  ```
-
-### **命名路由**
-- **作用**: 给路由命名，便于通过 `name` 属性跳转。
-- **示例**:
-  ```javascript
-  const routes = [
-    { path: '/user/:id', component: User, name: 'user' }
-  ];
-
-  // 使用 name 跳转
-  this.$router.push({ name: 'user', params: { id: 123 } });
-  ```
-
-### **路由守卫**
-- **全局守卫**:
-  ```javascript
-  router.beforeEach((to, from, next) => {
-    if (to.meta.requiresAuth && !isAuthenticated()) {
-      next('/login');
-    } else {
-      next();
-    }
-  });
-  ```
-- **路由独享守卫**:
-  ```javascript
-  { path: '/admin', component: Admin, beforeEnter: (to, from, next) => { ... } }
-  ```
-- **组件内守卫**:
-  ```javascript
-  import { onBeforeRouteEnter, onBeforeRouteLeave } from 'vue-router';
-
-  onBeforeRouteEnter((to, from, next) => {
-    console.log('进入路由');
-    next();
-  });
-
-  onBeforeRouteLeave((to, from, next) => {
-    console.log('离开路由');
-    next();
-  });
-  ```
-
-### **路由元信息**
-- **作用**: 在路由配置中添加自定义元信息（`meta`），用于权限控制等场景。
-- **示例**:
-  ```javascript
-  const routes = [
-    { path: '/admin', component: Admin, meta: { requiresAuth: true } }
-  ];
-
-  // 在全局守卫中使用
-  router.beforeEach((to, from, next) => {
-    if (to.meta.requiresAuth && !isAuthenticated()) {
-      next('/login');
-    } else {
-      next();
-    }
-  });
-  ```
-
----
-
-## **2. Pinia（推荐的状态管理工具）**
-
-### **核心概念**
-- **`defineStore`**: 定义一个 Pinia 状态管理模块。
-- **`state`**: 定义全局状态。
-- **`getters`**: 定义派生状态（类似于计算属性）。
-- **`actions`**: 定义同步或异步操作。
-
-### **示例**
+### **补充：路由懒加载**  
+通过动态 `import` 实现组件按需加载，减少初始包体积：  
 ```javascript
-import { createPinia, defineStore } from 'pinia';
+// 路由配置中使用懒加载
+const routes = [
+  { 
+    path: '/home', 
+    component: () => import('@/views/Home.vue') // 懒加载组件
+  },
+  { 
+    path: '/about', 
+    component: () => import(/* webpackChunkName: "about" */ '@/views/About.vue') // 自定义chunk名称
+  }
+];
+```
+
+### **补充：编程式导航进阶**  
+除了 `push`，还有 `replace`（替换历史记录）和 `go`（前进/后退）：  
+```javascript
+import { useRouter } from 'vue-router';
+
+const router = useRouter();
+
+// 替换当前路由（不新增历史记录）
+router.replace('/login');
+
+// 前进/后退（类似window.history）
+router.go(1); // 前进1步
+router.go(-1); // 后退1步
+```
+
+### **补充：查询参数（query）**  
+用于传递非动态路由的参数（显示在URL查询字符串中）：  
+```javascript
+// 跳转时携带query
+router.push({ path: '/search', query: { keyword: 'vue' } });
+
+// 获取query参数
+const route = useRoute();
+console.log(route.query.keyword); // 输出 'vue'
+```
+
+
+## **2. Pinia（状态管理）**
+
+### **补充：状态持久化**  
+使用 `pinia-plugin-persistedstate` 实现状态本地存储（刷新不丢失）：  
+```bash
+npm install pinia-plugin-persistedstate
+```
+
+```javascript
+// main.js 注册插件
+import { createPinia } from 'pinia';
+import piniaPluginPersistedstate from 'pinia-plugin-persistedstate';
 
 const pinia = createPinia();
+pinia.use(piniaPluginPersistedstate);
 
-const useStore = defineStore('main', {
-  state: () => ({
-    count: 0
-  }),
-  getters: {
-    doubleCount: (state) => state.count * 2
-  },
+// 定义带持久化的store
+const useUserStore = defineStore('user', {
+  state: () => ({ token: '', userInfo: {} }),
   actions: {
-    increment() {
-      this.count++;
-    },
-    async asyncIncrement() {
-      await new Promise((resolve) => setTimeout(resolve, 1000));
-      this.count++;
+    setToken(token) { this.token = token; }
+  },
+  persist: true // 开启持久化（默认存储在localStorage）
+});
+```
+
+### **补充：Store 间通信**  
+不同 Store 可直接调用对方的方法或状态：  
+```javascript
+// userStore.js
+export const useUserStore = defineStore('user', {
+  state: () => ({ userId: 1 }),
+});
+
+// cartStore.js
+import { useUserStore } from './userStore';
+export const useCartStore = defineStore('cart', {
+  actions: {
+    async fetchCart() {
+      const userStore = useUserStore();
+      const res = await api.get(`/cart?userId=${userStore.userId}`); // 调用其他store的状态
     }
   }
 });
-
-export default useStore;
 ```
 
----
 
-## **3. Composition API**
+## **3. Composition API（组合式API）**
 
-### **核心概念**
-- **`setup`**: Vue 3 的新特性，用于定义组件逻辑。
-- **`ref` 和 `reactive`**: 创建响应式数据。
-- **`computed`**: 定义计算属性。
-- **`watch` 和 `watchEffect`**: 监听数据变化。
-- **`provide` 和 `inject`**: 跨层级组件通信。
-
-### **高级特性**
-- **`toRefs` 和 `toRef`**:
-  - 将 `reactive` 对象的属性解构为独立的 `ref`。
-- **`shallowReactive` 和 `shallowRef`**:
-  - 创建浅层响应式对象或引用。
-- **`customRef`**:
-  - 自定义 `ref`，用于实现复杂的响应式逻辑。
-
-### **示例**
+### **补充：生命周期钩子**  
+在 `setup` 中使用生命周期钩子（需从vue导入）：  
 ```javascript
-import { ref, reactive, computed, watch, toRefs } from 'vue';
+import { onMounted, onUnmounted, onUpdated } from 'vue';
 
-export default {
-  setup() {
-    const state = reactive({ count: 0, message: 'Hello Vue 3!' });
-    const { count, message } = toRefs(state);
+setup() {
+  // 组件挂载后执行
+  onMounted(() => {
+    console.log('组件已挂载');
+    window.addEventListener('scroll', handleScroll);
+  });
 
-    const doubleCount = computed(() => count.value * 2);
+  // 组件更新后执行
+  onUpdated(() => {
+    console.log('组件已更新');
+  });
 
-    watch(count, (newVal, oldVal) => {
-      console.log(`Count changed from ${oldVal} to ${newVal}`);
-    });
+  // 组件卸载前执行（清理副作用）
+  onUnmounted(() => {
+    console.log('组件即将卸载');
+    window.removeEventListener('scroll', handleScroll);
+  });
 
-    function increment() {
-      count.value++;
-    }
-
-    return {
-      count,
-      message,
-      doubleCount,
-      increment
-    };
-  }
-};
-```
-
----
-
-## **4. 动画与过渡**
-
-### **核心概念**
-- **`<transition>`**: 用于单个元素或组件的过渡效果。
-- **`<transition-group>`**: 用于列表的过渡效果。
-- **常用类名**:
-  - `v-enter`、`v-enter-active`、`v-enter-to`
-  - `v-leave`、`v-leave-active`、`v-leave-to`
-
-### **过渡模式**
-- **模式**:
-  - `in-out`: 先执行进入动画，再执行离开动画。
-  - `out-in`: 先执行离开动画，再执行进入动画。
-
-### **结合第三方库**
-- 使用 `animate.css`:
-  ```html
-  <transition name="fade">
-    <p v-if="show" class="animated fadeIn">Hello Vue!</p>
-  </transition>
-  ```
-- 使用 `GSAP`:
-  ```javascript
-  mounted() {
-    this.$nextTick(() => {
-      gsap.to(this.$refs.box, { x: 100, duration: 1 });
-    });
-  }
-  ```
-
----
-
-## **5. 异步组件**
-
-### **作用**
-按需加载组件，减少初始加载时间。
-
-### **高级用法**
-- **异步组件的加载状态**:
-  - 使用 `defineAsyncComponent` 的 `loadingComponent` 和 `errorComponent` 配置加载和错误状态。
-
-### **示例**
-```javascript
-import { defineAsyncComponent } from 'vue';
-
-const AsyncComponent = defineAsyncComponent({
-  loader: () => import('./MyComponent.vue'),
-  loadingComponent: LoadingComponent,
-  errorComponent: ErrorComponent,
-  delay: 200, // 延迟显示加载状态
-  timeout: 3000 // 超时时间
-});
-
-export default {
-  components: {
-    AsyncComponent
-  }
-};
-```
-
----
-
-## **6. 性能优化**
-
-### **常用优化方法**
-- **`v-once`**: 静态内容只渲染一次。
-- **异步组件**: 按需加载组件。
-- **`key`**: 在列表渲染中使用 `key` 提高性能。
-- **事件节流与防抖**:
-  - 限制高频事件的触发次数。
-
-### **示例**
-```javascript
-import { ref } from 'vue';
-import _ from 'lodash';
-
-export default {
-  setup() {
-    const handleResize = _.debounce(() => {
-      console.log('窗口大小改变');
-    }, 300);
-
-    window.addEventListener('resize', handleResize);
-
-    return {};
-  },
-  beforeUnmount() {
-    window.removeEventListener('resize', handleResize);
-  }
-};
-```
-
----
-
-## **7. 服务端渲染（SSR）**
-
-### **核心概念**
-- **`context` 对象**:
-  - 在服务端渲染中，`context` 是一个对象，用于在服务端和客户端之间传递数据。
-  - 它可以包含路由信息、初始状态（如 Pinia 的状态）以及其他需要在服务端渲染时使用的数据。
-- **`renderToString`**:
-  - 将 Vue 实例渲染为 HTML 字符串。
-
-### **示例**
-```javascript
-import { createSSRApp } from 'vue';
-import { renderToString } from '@vue/server-renderer';
-
-const app = createSSRApp({
-  data() {
-    return { message: 'Hello Vue SSR!' };
-  },
-  template: `<div>{{ message }}</div>`
-});
-
-renderToString(app).then((html) => {
-  console.log(html);
-});
-```
-
----
-
-## 第8点：Vue 3 插件系统
-Vue 3 的插件系统允许开发者扩展 Vue 的功能，通常用于添加全局功能、组件或指令。以下是使用 Vue 3 插件系统的步骤：
-
-### 1. 创建插件
-插件是一个对象，包含 `install` 方法，或者直接是一个函数。
-```javascript
-// 创建一个简单的插件
-const MyPlugin = {
-  install(app, options) {
-    // 添加全局方法
-    app.config.globalProperties.$myMethod = function () {
-      console.log('这是一个全局方法');
-    };
-
-    // 添加全局指令
-    app.directive('focus', {
-      mounted(el) {
-        el.focus();
-      },
-    });
-
-    // 添加全局组件
-    app.component('MyComponent', {
-      template: '<div>这是一个全局组件</div>',
-    });
-
-    // 添加全局混入
-    app.mixin({
-      created() {
-        console.log('全局混入的 created 钩子');
-      },
-    });
-  },
-};
-```
-
-### 2. 注册插件
-在 Vue 应用中通过 `app.use()` 注册插件。
-```javascript
-import { createApp } from 'vue';
-import App from './App.vue';
-import MyPlugin from './my-plugin';
-
-const app = createApp(App);
-
-// 注册插件
-app.use(MyPlugin, { someOption: true });
-
-app.mount('#app');
-```
-
-### 3. 使用插件
-插件注册后，可以在 Vue 应用中使用插件提供的功能。
-```javascript
-// 使用全局方法
-this.$myMethod();
-
-// 使用全局指令
-<input v-focus />;
-
-// 使用全局组件
-<MyComponent />;
-```
-
-### 4. 高级用法
-- **插件的选项**：通过 `install` 方法的第二个参数传递选项。
-- **动态加载插件**：可以根据条件动态加载插件。
-```javascript
-// 动态加载插件
-if (someCondition) {
-  app.use(MyPlugin, { option: 'value' });
+  function handleScroll() { /* ... */ }
 }
 ```
 
-通过插件系统，开发者可以轻松扩展 Vue 应用的功能，提升代码的复用性和可维护性。
+### **补充：provide/inject 跨层通信**  
+用于爷孙组件、深层组件通信：  
+```javascript
+// 父组件（提供数据）
+import { provide } from 'vue';
+
+setup() {
+  const theme = ref('dark');
+  // 提供数据（key, value）
+  provide('theme', theme);
+}
+
+// 子/孙组件（注入数据）
+import { inject } from 'vue';
+
+setup() {
+  // 注入数据（key, 默认值）
+  const theme = inject('theme', ref('light'));
+  return { theme };
+}
+```
+
+### **补充：customRef 自定义响应式**  
+实现带防抖的输入框响应式：  
+```javascript
+import { customRef } from 'vue';
+
+function useDebouncedRef(value, delay = 300) {
+  let timeout;
+  return customRef((track, trigger) => {
+    return {
+      get() {
+        track(); // 追踪依赖
+        return value;
+      },
+      set(newVal) {
+        clearTimeout(timeout);
+        timeout = setTimeout(() => {
+          value = newVal;
+          trigger(); // 触发更新
+        }, delay);
+      }
+    };
+  });
+}
+
+// 使用
+setup() {
+  const searchText = useDebouncedRef(''); // 输入300ms后才更新
+  return { searchText };
+}
+```
+
+
+## **4. 动画与过渡**
+
+### **补充：列表过渡（transition-group）**  
+实现列表项增删动画：  
+```html
+<template>
+  <transition-group name="list" tag="ul">
+    <li v-for="item in items" :key="item.id">
+      {{ item.name }}
+      <button @click="remove(item.id)">删除</button>
+    </li>
+  </transition-group>
+  <button @click="add">添加项</button>
+</template>
+
+<script setup>
+import { ref } from 'vue';
+let id = 3;
+const items = ref([
+  { id: 1, name: '项1' },
+  { id: 2, name: '项2' }
+]);
+const add = () => items.value.push({ id: id++, name: `项${id}` });
+const remove = (id) => items.value = items.value.filter(i => i.id !== id);
+</script>
+
+<style>
+/* 列表项过渡样式 */
+.list-enter-active, .list-leave-active {
+  transition: all 0.3s ease;
+}
+.list-enter-from, .list-leave-to {
+  opacity: 0;
+  transform: translateY(10px);
+}
+</style>
+```
+
+### **补充：JS 钩子动画**  
+通过JS控制动画细节（如结合GSAP）：  
+```html
+<transition
+  @before-enter="beforeEnter"
+  @enter="enter"
+  @leave="leave"
+>
+  <div v-if="show" ref="box" class="box"></div>
+</transition>
+
+<script setup>
+import { ref } from 'vue';
+import gsap from 'gsap';
+
+const show = ref(false);
+const box = ref(null);
+
+const beforeEnter = (el) => {
+  el.style.opacity = 0;
+  el.style.transform = 'scale(0)';
+};
+
+const enter = (el, done) => {
+  gsap.to(el, {
+    opacity: 1,
+    scale: 1,
+    duration: 0.5,
+    onComplete: done // 必须调用done通知动画结束
+  });
+};
+
+const leave = (el, done) => {
+  gsap.to(el, {
+    opacity: 0,
+    scale: 0,
+    duration: 0.5,
+    onComplete: done
+  });
+};
+</script>
+```
+
+
+## **5. 异步组件与 Suspense**
+
+### **补充：与 Suspense 结合使用**  
+`Suspense` 用于等待异步组件加载，显示 fallback 内容：  
+```html
+<!-- 父组件 -->
+<template>
+  <Suspense>
+    <!-- 异步组件（需要等待的内容） -->
+    <AsyncComponent />
+    <!-- 加载中显示的内容 -->
+    <template #fallback>
+      <div>加载中...</div>
+    </template>
+  </Suspense>
+</template>
+
+<script setup>
+import { defineAsyncComponent } from 'vue';
+// 定义异步组件
+const AsyncComponent = defineAsyncComponent(() => import('./AsyncComp.vue'));
+</script>
+
+<!-- AsyncComp.vue（异步组件） -->
+<script setup>
+// 组件内部可以有异步操作（如API请求）
+const data = await fetch('/api/data').then(res => res.json());
+</script>
+```
+
+
+## **6. 性能优化**
+
+### **补充：memo 组件（缓存组件）**  
+避免组件不必要的重渲染（类似React.memo）：  
+```html
+<template>
+  <!-- 只有当 props 变化时才重新渲染 -->
+  <MemoizedComponent :count="count" />
+</template>
+
+<script setup>
+import { ref, memo } from 'vue';
+// 普通组件
+const MyComponent = ({ count }) => {
+  console.log('组件渲染了');
+  return <div>{count}</div>;
+};
+// 缓存组件（仅当count变化时重新渲染）
+const MemoizedComponent = memo(MyComponent, (prevProps, nextProps) => {
+  return prevProps.count === nextProps.count; // 自定义比较逻辑
+});
+
+const count = ref(0);
+</script>
+```
+
+### **补充：shallowRef 与 shallowReactive**  
+用于优化深层对象的响应式性能（只监听顶层属性）：  
+```javascript
+// shallowRef：只监听 .value 的变化，不监听内部属性
+const shallow = shallowRef({ a: 1 });
+shallow.value.a = 2; // 不会触发更新
+shallow.value = { a: 2 }; // 会触发更新
+
+// shallowReactive：只监听顶层属性，不监听嵌套属性
+const shallowObj = shallowReactive({ a: { b: 1 } });
+shallowObj.a.b = 2; // 不会触发更新
+shallowObj.a = { b: 2 }; // 会触发更新
+```
+
+
+## **7. 错误处理**
+
+### **全局错误处理**  
+捕获应用内所有未处理的错误（包括组件渲染、事件回调等）：  
+```javascript
+// main.js
+const app = createApp(App);
+app.config.errorHandler = (err, instance, info) => {
+  console.error('全局错误捕获:', err);
+  console.log('组件实例:', instance);
+  console.log('错误信息:', info); // 如 "render" 表示渲染时出错
+  // 可在这里上报错误到服务端
+};
+```
+
+### **组件内错误捕获**  
+通过 `onErrorCaptured` 捕获子组件错误：  
+```javascript
+import { onErrorCaptured } from 'vue';
+
+setup() {
+  onErrorCaptured((err, instance, info) => {
+    console.log('子组件错误:', err);
+    // 返回 true 阻止错误继续向上传播
+    return true;
+  });
+}
+```
+
+### **异步错误处理**  
+在 `setup` 或 `actions` 中处理异步错误：  
+```javascript
+// 组件中
+setup() {
+  const loadData = async () => {
+    try {
+      const res = await fetch('/api/data');
+      if (!res.ok) throw new Error('请求失败');
+      return res.json();
+    } catch (err) {
+      console.error('异步错误:', err);
+    }
+  };
+}
+
+// Pinia actions 中
+const useDataStore = defineStore('data', {
+  actions: {
+    async fetchData() {
+      try {
+        this.data = await api.getData();
+      } catch (err) {
+        this.error = err.message;
+      }
+    }
+  }
+});
+```
+
+
+## **8. 边界情况处理**
+
+### **Teleport（传送门）**  
+将组件内容渲染到DOM的指定位置（如模态框避免样式嵌套问题）：  
+```html
+<template>
+  <button @click="show = true">打开弹窗</button>
+  <teleport to="body"> <!-- 渲染到body下 -->
+    <div v-if="show" class="modal">
+      <p>这是弹窗内容</p>
+      <button @click="show = false">关闭</button>
+    </div>
+  </teleport>
+</template>
+
+<script setup>
+import { ref } from 'vue';
+const show = ref(false);
+</script>
+```
+
+### **Fragment（片段）**  
+Vue 3 自动支持多根节点（无需额外包裹div）：  
+```html
+<template>
+  <h1>标题</h1>
+  <p>内容1</p>
+  <p>内容2</p>
+</template>
+<!-- 编译后自动包裹在Fragment中，不会生成多余DOM -->
+```
+
+### **v-pre 指令**  
+跳过元素的编译过程（用于显示原始模板内容）：  
+```html
+<div v-pre>
+  {{ 这部分不会被编译，会原样显示 }}
+</div>
+```
+
+
+## **9. 自定义指令进阶**
+
+### **示例：v-copy（一键复制文本）**  
+```javascript
+// 注册全局指令
+app.directive('copy', {
+  mounted(el, binding) {
+    el.addEventListener('click', () => {
+      navigator.clipboard.writeText(binding.value)
+        .then(() => {
+          alert('复制成功');
+        })
+        .catch(() => {
+          alert('复制失败');
+        });
+    });
+  }
+});
+
+// 使用
+<button v-copy="textToCopy">复制</button>
+```
+
+### **示例：v-click-outside（点击外部关闭）**  
+```javascript
+app.directive('click-outside', {
+  mounted(el, binding) {
+    const handleClick = (e) => {
+      if (!el.contains(e.target)) {
+        binding.value(); // 执行绑定的方法
+      }
+    };
+    document.addEventListener('click', handleClick);
+    // 卸载时移除事件
+    el._clickOutsideHandler = handleClick;
+  },
+  unmounted(el) {
+    document.removeEventListener('click', el._clickOutsideHandler);
+  }
+});
+
+// 使用（关闭弹窗）
+<div v-if="show" v-click-outside="() => show = false">弹窗内容</div>
+```
+
+
+## **10. 响应式工具**  
+用于判断响应式数据类型：  
+```javascript
+import { isRef, isReactive, isProxy } from 'vue';
+
+const a = ref(1);
+const b = reactive({});
+const c = 123;
+
+console.log(isRef(a)); // true
+console.log(isReactive(b)); // true
+console.log(isProxy(b)); // true（reactive基于Proxy实现）
+console.log(isRef(c)); // false
+```
